syntax = "proto3";

import "contentd.proto";

service Contentd {
  rpc NewTweet (NewTweetRequest) returns (NewTweetResponse);
  rpc GetTweet (GetTweetRequest) returns (GetTweetResponse);
}

message NewTweetRequest {
  string Content = 1;
  string PosterUID = 2;
}

message NewTweetResponse {}

message GetTweetRequest {
  string TID = 1;
}

message GetTweetResponse {
  contentd.Tweet Tweet = 1;
}
